--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ionic/react": "^6.4.1",
+    "axios": "^1.2.1",
+    "ionicons": "^6.0.4",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^6.4.5",
+    "react-scripts": "^2.1.3",
+    "sort-by": "^0.0.2",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
